compiler/testData/cli/jvm/languageVersion.kt
package test

annotation class Outer {
    class Nested
}
